--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "scripts-and-styles-loader",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "A simple alternative for dynamic importing JS and CSS files.",
 	"author": "Shahab Movahhedi <dev@shmovahhedi.com>",
 	"license": "MIT",
@@ -12,6 +12,14 @@
 		"url": "https://github.com/movahhedi/scripts-and-styles-loader/issues"
 	},
 	"homepage": "https://github.com/movahhedi/scripts-and-styles-loader#readme",
+	"keywords": [
+		"load",
+		"script",
+		"style",
+		"js",
+		"css",
+		"movahhedi"
+	],
 	"type": "module",
 	"source": "index.ts",
 	"exports": {
